[package]
name = "suitspoof"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["devprogrmer"]
description = "DPI-bypass and IP-spoofing tunnel tool"
repository = "https://github.com/devprogrmer/suitspoof"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
bytes = "1"
tokio = { version = "1", features = ["full"] }
