[package]
name = "suitspoof"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["devprogrmer"]
description = "DPI-bypass and IP-spoofing tunnel tool"
repository = "https://github.com/devprogrmer/suitspoof"

[dependencies]
anyhow = "1"
async-channel = "2"
bytes = "1"
chrono = "0.4"
env_logger = "0.11"
hex = "0.4"
hmac = "0.12"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
