[package]
name = "suitspoof"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["devprogrmer"]
description = "DPI-bypass and IP-spoofing tunnel tool"
repository = "https://github.com/devprogrmer/suitspoof"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-channel = "2"
async-lock = "3"
async-net = "2"
bytes = "1"
chacha20 = "0.9"
chrono = "0.4"
dashmap = "6"
env_logger = "0.11"
event-listener = "5"
futures-lite = "2"
hex = "0.4"
hmac = "0.12"
ip_network = "0.4"
log = "0.4"
num_cpus = "1"
pnet_packet = "0.35"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"] }
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
